--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -65,10 +65,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />
 
     <Button
-        android:id="@+id/btnCreate"
+        android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registrar Conta"
+        android:text="Registrar conta"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
