--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,7 +10,7 @@
             android:icon="@drawable/homeplaceholder"
             android:title="@string/home"/>
         <item
-            android:id="@+id/nav_share"
+            android:id="@+id/nav_locker"
             android:icon="@drawable/lockerplaceholder"
             android:title="@string/locker"/>
         <item
