--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,18 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:id="@+id/toolbar"
+            app:title=" "
             android:elevation="4dp"
-            android:background="@color/lavender"
+            android:background="@color/dark_blue"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+
+        </androidx.appcompat.widget.Toolbar>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragment_container"/>
+            android:id="@+id/fragment_container">
+
+        </FrameLayout>
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -57,7 +64,7 @@
                 app:layout_anchor="@id/bottomAppBar"
                 app:maxImageSize="40dp"
                 android:id="@+id/fab"
-                app:tint="@color/lavender"
+                app:tint="@color/dark_blue"
                 android:contentDescription="@string/todo" />
 
 
@@ -71,9 +78,8 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_menu"
-        android:background="@drawable/menubkg"
-        app:itemIconTint="@color/lavender"
-        app:itemTextColor="@color/lavender"/>
+        app:itemIconTint="@color/dark_blue"
+        app:itemTextColor="@color/dark_blue"/>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
