--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -13,6 +13,6 @@
         android:text="About Us Fragment"
         android:textSize="30sp"
         android:layout_centerInParent="true"
-        android:textColor="@color/lavender"/>
+        android:textColor="@color/dark_blue"/>
 
 </RelativeLayout>
