--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,5 +12,5 @@
         android:text="Settings Fragment"
         android:textSize="30sp"
         android:layout_centerInParent="true"
-        android:textColor="@color/lavender"/>
+        android:textColor="@color/dark_blue"/>
 </RelativeLayout>
