--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
         <color name="purple_200">#FFBB86FC</color>
         <color name="purple_500">#FF6200EE</color>
         <color name="purple_700">#FF3700B3</color>
-        <color name="teal_200">#FF03DAC5</color>
+        <color name="teal_200">#ffff00</color>
         <color name="teal_700">#FF018786</color>
-        <color name="lavender">#351A96</color>
+        <color name="dark_blue">#351A96</color>
 
 </resources>
