--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -119,7 +119,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etConfPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="@string/confirmar_senha" />
     </com.google.android.material.textfield.TextInputLayout>
 
