update floating button new loc

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/bottom_locker"
         android:title="locker"
-        android:icon="@drawable/lockerplaceholder"
+        android:icon="@drawable/locplaceholder"
         />
 
     <item
