update round fab

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,39 +30,49 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginStart="250dp"
         android:clickable="true"
-        android:src="@drawable/lock"
+        android:src="@drawable/lock_icon"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"
+        app:shapeAppearanceOverlay="@style/fab_round"
+        android:contentDescription="TODO"
+
+        android:focusable="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_navigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginStart="250dp"
         android:clickable="true"
-        android:src="@drawable/lock"
+        android:src="@drawable/lock_icon"
         app:layout_constraintBottom_toTopOf="@+id/fab_expand"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"
+        app:shapeAppearanceOverlay="@style/fab_round"
+        android:contentDescription="TODO"
+        android:focusable="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginStart="250dp"
         android:clickable="true"
-        android:src="@drawable/lock"
+        android:src="@drawable/lock_icon"
         app:layout_constraintBottom_toTopOf="@+id/fab_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"
+        app:shapeAppearanceOverlay="@style/fab_round"
+        android:contentDescription="TODO"
+        android:focusable="true" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
