--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,14 +42,15 @@
 
         android:focusable="true" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab_navigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginStart="250dp"
         android:clickable="true"
-        android:src="@drawable/lock_icon"
+        app:icon="@drawable/nav"
+        android:text="Navegar"
         app:layout_constraintBottom_toTopOf="@+id/fab_expand"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,14 +59,15 @@
         android:contentDescription="TODO"
         android:focusable="true" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginStart="250dp"
         android:clickable="true"
-        android:src="@drawable/lock_icon"
+        app:icon="@drawable/lock_icon"
+        android:text="Locar"
         app:layout_constraintBottom_toTopOf="@+id/fab_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
